# ros2_project

./: .gitignore  README.md  test_yolo.py
maps_storage/: my_apartment_map.pgm  my_apartment_map.yaml
src/gps_mqtt_bridge/: package.xml  setup.cfg  setup.py
src/gps_mqtt_bridge/gps_mqtt_bridge/: gps_mqtt_node.py  hw_gps_node.py
src/gps_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/gps_navigation/src/: navigation_node.cpp
src/hoverboard_control/: package.xml  setup.cfg  setup.py
src/hoverboard_control/hoverboard_control/: hoverboard_control_node.py
src/hoverboard_description/: CMakeLists.txt  package.xml
src/hoverboard_description/launch/: robot_description.launch.py
src/hoverboard_description/urdf/: my_robot.urdf
src/huskylens_interface/: package.xml  setup.cfg  setup.py
src/huskylens_interface/huskylens_interface/: huskylens_node.py
src/kinect_freenect/: CMakeLists.txt  package.xml
src/kinect_freenect/src/: kinect_node.cpp
src/robot_navigation_manager/: package.xml  setup.cfg  setup.py
src/robot_navigation_manager/config/: destinations.yaml
src/robot_navigation_manager/robot_navigation_manager/: navigation_manager_node.py
src/vision_interfaces/: CMakeLists.txt  package.xml
src/vision_interfaces/msg/: Detection.msg  Detections.msg
src/vision_processing/: package.xml  setup.py
src/vision_processing/launch/: webcam.launch.py
src/vision_processing/vision_processing/: yolo_node.py
src/vision_processing/vision_processing/msg/: Detection.msg  Detections.msg
src/web_control_interface/: package.xml  setup.cfg  setup.py
src/web_control_interface/web_control_interface/: web_server.py
src/web_control_interface/web_control_interface/static/: index.html
