<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_navigation</name>
  <version>0.0.0</version> <description>Navigation package including GPS navigation and manager node</description> <maintainer email="root@todo.todo">root</maintainer> <license>Apache-2.0</license> <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend> <depend>rclcpp</depend>     <depend>rclpy</depend>      <depend>std_msgs</depend>   <depend>sensor_msgs</depend> <depend>geometry_msgs</depend> <depend>tf2</depend>         <depend>tf2_ros</depend>     <depend>tf2_geometry_msgs</depend> <depend>rclpy_action</depend> <depend>nav2_msgs</depend>   <depend>nav_msgs</depend> <depend>python-yaml</depend> <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
    <ament_python>
      <resource_index>resource_index/packages</resource_index>
    </ament_python>
  </export>
</package>